[package]
name = "rs-jsontxt2token"
version = "0.1.0"
edition = "2024"

description = "Converts the jsonl to tokens."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-jsontxt2token"
homepage = "https://github.com/takanoriyanagitani/rs-jsontxt2token"
documentation = "https://docs.rs/rs-jsontxt2token/latest"
keywords = ["tokenize", "helper", "japanese", "jsonl", "json"]

exclude = [
    "rs-jsontxt2token.wasm",
    "opt.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.clap]
version = "4"
default-features = false
features = [
    "std",
    "derive",
    "help",
    "usage",
]

[dependencies.lindera]
version = "3"
default-features = false
features = [
    "embed-ipadic",
]

[dependencies.serde]
version = "1"
default-features = false
features = [
    "std",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
    "std",
]
